src/objects/ACET_External__mdt.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSU - CUSTOMER SERVICE</fullName>
                    <default>true</default>
                    <label>CSU - CUSTOMER SERVICE</label>
                </value>
                <value>
                    <fullName>OGS - OPTUM GLOBAL SOL</fullName>
                </value>
                <value>
                    <fullName>PCR - PCRS NETWORK</fullName>
                </value>
                <value>
                    <fullName>PRV - PROVIDER</fullName>
                </value>
                <value>
                    <fullName>CAP - CAPTIVE</fullName>
                </value>
                <value>
                    <fullName>MCD - MEDICAID</fullName>
                </value>
                <value>
                    <fullName>PAC - PROVIDER ADVOCACY</fullName>
                </value>
                <value>
                    <fullName>PWC - PROVIDER WIPRO CEBU</fullName>
                </value>
                <value>
                    <fullName>HHS - HHS PPSI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>107 - ONLINE HELP DESK</fullName>
                    <default>true</default>
                    <label>107 - ONLINE HELP DESK</label>
                </value>
                <value>
                    <fullName>110 - UHC PROV SERVICE</fullName>
                </value>
                <value>
                    <fullName>120 - GURGAON</fullName>
                </value>
                <value>
                    <fullName>400 - GOVT MBR SVCS</fullName>
                </value>
                <value>
                    <fullName>403 - OVATIONS</fullName>
                </value>
                <value>
                    <fullName>410 - GOV CLAIM ENTRY</fullName>
                </value>
                <value>
                    <fullName>444 - EDI LEVEL</fullName>
                </value>
                <value>
                    <fullName>445 - HHS PPSA PROJ</fullName>
                </value>
                <value>
                    <fullName>99 - WEST TEL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CHT - PSA ONLINE CHAT</fullName>
                    <default>true</default>
                    <label>CHT - PSA ONLINE CHAT</label>
                </value>
                <value>
                    <fullName>LNK - OGS LINK TEAM</fullName>
                </value>
                <value>
                    <fullName>CEB - ENIPSA OGS CEBU</fullName>
                </value>
                <value>
                    <fullName>ECT - EASTCENTRAL PCR</fullName>
                </value>
                <value>
                    <fullName>MCA - MEDICA PROVIDER</fullName>
                </value>
                <value>
                    <fullName>MNN - MEDICA PROV MN</fullName>
                </value>
                <value>
                    <fullName>NNT - WIPROINDIA PSA</fullName>
                </value>
                <value>
                    <fullName>NTX - NTEXAS PCRS</fullName>
                </value>
                <value>
                    <fullName>NWY - NY PCRS</fullName>
                </value>
                <value>
                    <fullName>ONC - OCOLOGY PROV Q</fullName>
                </value>
                <value>
                    <fullName>OON - WIPROAIROLIPPR</fullName>
                </value>
                <value>
                    <fullName>OPT - PROJECT TEAMFWA</fullName>
                </value>
                <value>
                    <fullName>PPS - PLATINUM PROV</fullName>
                </value>
                <value>
                    <fullName>QCY - ENIPSA OGS QUEZON</fullName>
                </value>
                <value>
                    <fullName>RKS - RV KOLKATA SAS</fullName>
                </value>
                <value>
                    <fullName>RVN - RV/NHP</fullName>
                </value>
                <value>
                    <fullName>SES - PSA WIPROCEBU</fullName>
                </value>
                <value>
                    <fullName>STX - STEXAS PCRS</fullName>
                </value>
                <value>
                    <fullName>SWC - SAS WIPRO CEBU</fullName>
                </value>
                <value>
                    <fullName>SWI - SAS WIPRO INDIA</fullName>
                </value>
                <value>
                    <fullName>TAG - ENIPSA OGS TAGU</fullName>
                </value>
                <value>
                    <fullName>ESC - E&amp;I ESCALATION</fullName>
                </value>
                <value>
                    <fullName>PAC - PAC PROV CALL</fullName>
                </value>
                <value>
                    <fullName>PRN - PACHPPWIPRRVNHP</fullName>
                </value>
                <value>
                    <fullName>EOB - EOB/PRA REQUEST</fullName>
                </value>
                <value>
                    <fullName>PAC - CS PAC PROV CALL</fullName>
                </value>
                <value>
                    <fullName>HI1 - PROVIDER HAWAII</fullName>
                </value>
                <value>
                    <fullName>ALB - MNRPSA OGS ALAB</fullName>
                </value>
                <value>
                    <fullName>ALS - PNRPSA OGS ALAB</fullName>
                </value>
                <value>
                    <fullName>CES - PSASAS OGS CEBU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ACET_AdvocateExternalIdMapping</label>
    <listViews>
        <fullName>Default</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Office__c</columns>
        <columns>Department__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>Default</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>ACET_AdvocateExternalIdMappings</pluralLabel>
</CustomObject>